tests/neg/parser-stability-18.scala
trait x0 {
    class x1 (x1:x0
    {
type x1 <: List[x1 <:  // error
